--- a/scss/main.scss
+++ b/scss/main.scss
@@ -69,7 +69,8 @@ main{
     }
 
     &#home {
-        // overflow: hidden; // This eliminates scrollbars
+        height: 100vh;
+        overflow: hidden; // This eliminates scrollbars
         h1 {
             margin-top: 20vh;
         }
